# jfrog-cli

./: .editorconfig  .gitignore  .tool-versions  .travis.yml  CONTRIBUTING.md  Dockerfile  GENERIC-PACKAGE-MANAGER-FRAMEWORK.md  Jenkinsfile  Jenkinsfile-dev-build  Jenkinsfile.groovy  Makefile  README.md  RELEASE.md  RUBY_GEMS_IMPLEMENTATION_SUMMARY.md  SECURITY_TEST.md  TESTS.md  THIRD_PARTY_NOTICES  access_test.go  agent_plugins_test.go  api_test.go  apk_test.go  appveyor.yml  apt_test.go  artifactory_test.go  artifactorybulkrepository_test.go  bintray.go  bintray_test.go  build.bat  build.sh  buildinfo_test.go  buildtools_test.go  ca.key  cargo_test.go  completion_test.go  conan_test.go  deb.json  distribution_test.go  docker_test.go  evidence_test.go  getCli.sh  (+50 more)
.frogbot/: frogbot-config.yml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_LINK_TEMPLATE.md  dependabot.yml  frogbot.yml  nuget.yml  release.yml
.jfrog/: jfrog-apps-config.yml
.jfrog-pipelines/: pipelines.yml
Godeps/: Godeps.json
artifactory/: cli.go  cli_test.go  main.go
auditscan/: cli.go
bintray/: cli.go  main.go
bintray_descriptors/: darwin_amd64.json  linux_386.json  linux_amd64.json  windows_amd64.json
bootstrap/: cli.go
bt/: main.go  main_test.go
btr/: main.go
buildtools/: build_env.go  cli.go  cli_test.go  help.go  packages.yaml  uv_auth_test.go
cli-release/: cli-distribution_rules.json  cli-rb-spec.json  docker-rb-spec.json  releases_distribution_rule.json
client/: bintray.go  client.go  client_test.go
cliutils/: _ioutils.go  config.go  ioUtils.go  ioutils.go  utils.go
command/: command.go  repos.go  upload.go
commands/: downloadFile.go  downloadVersion.go  entitlementKeys.go  entitlements.go  gpgSignFile.go  gpgSignVersion.go  packageCreate.go  packageDelete.go  packageShow.go  packageUpdate.go  upload.go  urlSign.go  versionCreate.go  versionDelete.go  versionPublish.go  versionShow.go  versionUpdate.go
completion/: cli.go
config/: cli.go  cli_test.go
distribution/: cli.go
docs/: PATH_SETUP.md  tools-filtering-path-per-process.md  tools-using-path-manipulation.md
documentation/: CLI-for-JFrog-Artifactory.md  CLI-for-JFrog-Cloud-Transfer.md  CLI-for-JFrog-Curation.md  CLI-for-JFrog-Distribution.md  CLI-for-JFrog-Lifecycle.md  CLI-for-JFrog-Mission-Control.md  CLI-for-JFrog-Pipelines.md  CLI-for-JFrog-Xray.md  JFrog-CLI.md  cli.ftmap
frog/: main.go
ghost-frog-action/: EXAMPLES.md  README.md  action.yml
guides/: getting-started-with-jfrog-using-the-cli.md  jfrog-cli-plugins-developer-guide.md
inttestutils/: artifactory.go  buildinfo.go  distribution.go  docker.go  releasebundle.go  transfer.go
jfrog/: artifactory_test.go  bintray_test.go  main.go  main_test.go
jfrog-client/: README.md
lifecycle/: cli.go  cli_test.go
mcp/: cli.go  mcp.go  mcp_test.go
missioncontrol/: cli.go  cli_test.go
newImpl/: buildinfo.go  (+1 more)
testdata/poetry/poetryproject/: pyproject.toml
testdata/poetry/poetryproject/my_poetry_project/: __init__.py
testdata/twine/pyproject/: pyproject.toml
testdata/twine/pyprojectlongfilename/: pyproject.toml
testdata/uv/uvproject/: pyproject.toml
testdata/uv/uvproject-no-index/: pyproject.toml
testdata/uv/uvproject-no-index/src/uv_jfrog_test/: __init__.py
testdata/xray/python/poetry/: pyproject.toml
(+1900 files in other folders)
