[tool.poetry]
name = "cli-poetry-build"
version = "0.1.0"
description = ""
authors = ["Tal Arian <tala@jfrog.com>"]

[tool.poetry.dependencies]
python = "*"
toml = "0.10.2"
pexpect = "4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
