[tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = "A test Poetry project for JFrog CLI integration tests"
authors = ["JFrog CLI Tests <cli-tests@jfrog.com>"]
packages = [{include = "my_poetry_project"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
